styles/style.css
*, *::before, *::after {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

input {
  border: 0;
}

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

.fade:hover {
  opacity: 0.6;
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  min-height: 1765px;
  width: 1440px;
  /* max-width: 1440px; */
  /* overflow: hidden; */
}


.pop-up-container {
  position: absolute;
  display: flex;
  justify-content: center;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  background-color: rgba(20, 20, 20, 0.3);
  z-index: 50;
}

.pop-up {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  /* align-items: baseline; */
  align-items: flex-start;
  align-content: flex-start;
  width: 650px;
  height: 660px;
  background: linear-gradient(177.09deg, #FFFFFF 6.15%, #0D606F 202.69%);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
  border-radius: 16px;
  margin-top: 140px;
}

.popup_header {
  /* width: 328px; */
  display: flex;
  justify-content: center;
  margin-top: 25px;
  width: 100%;
  height: 38px;
  font-family: 'Aleo';
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 38px;
  color: #0D606F;
}

.popup_sign_in {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 86%;
  /*  560px; */

  height: 56px;
  font-family: 'Red Hat Text';
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 26px;
  /* color: #FFFFFF; */
  /* background: #1877F2; */
  box-shadow: 0px 0px 3px rgba(13, 96, 111, 0.08), 0px 2px 3px rgba(13, 96, 111, 0.16);
  border-radius: 10px;
}

.popup_facebook {
  color: #FFFFFF;
  background: #1877F2;
  margin-top: 30px;
}

.popup_google {
  color: #0D606F;
  background: #FFFFFF;
  margin-top: 20px;
  padding-right: 3px;
}

.popup_google_text {
  margin-left: 10px;
}

.popup_icon_google {
  margin-top: 5px;

}

.popup_button {
  width: 100%;
  height: 54px;
  background: #0D606F;
  color: #FFFFFF;
  margin-top: 25px;
}

.popup_sign_in_icon {
  margin-right: 15px;
}

.popup_or_container {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  margin-top: 30px;
}


.popup_or {
  width: 40%;
  /*261px;*/

  height: 1px;
  border: 1px solid rgba(13, 96, 111, 0.5);
}

.popup_or_text {
  width: 20px;
  height: 24px;
  font-family: 'Aleo';
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  color: rgba(13, 96, 111, 0.5);
  margin: 0 10px;
}


.popup_label {
  display: block;
  width: 47px;
  height: 19px;
  font-family: 'Aleo';
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 19px;
  color: #0D606F;
  margin-bottom: 5px;
}

.popup_form {
  display: flex;
  width: 100%;
  justify-content: center;
  align-items: flex-start;
  margin-top: 10px;
}

.popup_input {
  width: 100%;
  /*560px;*/

  height: 54px;
  background: #FFFFFF;
  box-shadow: inset 0px 0px 3px rgba(13, 96, 111, 0.08), inset 0px 2px 3px rgba(13, 96, 111, 0.16);
  border-radius: 10px;
  padding: 0 10px;

}

.popup_input_password {
  margin-top: 20px;
}

.popup_forgotlink {
  width: auto;
  height: 18px;
  font-family: 'Aleo';
  font-style: normal;
  font-weight: 700;
  font-size: 15px;
  line-height: 18px;
  text-decoration-line: underline;
  color: #0D606F;
  text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
  margin-top: 11px;
  cursor: pointer;
}

.popup_input_email, .popup_input_password {
  width: 100%;
}

.reg_link {
  margin: 0;
}

#account {
  width: 100%;
  padding: 0 7%;
}

.popup_line {
  /* width: 560px; */
  width: 86%;
  height: 0px;
  border: 1px solid rgba(13, 96, 111, 0.5);
  transform: rotate(0.1deg);
  margin-top: 25px;
}

.popup_register {
  display: flex;
  justify-content: center;
  width: 100%;

  height: 18px;
  font-family: 'Aleo';
  font-style: normal;
  font-weight: 700;
  font-size: 15px;
  line-height: 18px;
  color: rgba(13, 96, 111, 0.5);
  text-shadow: 0px 2px 3px rgba(255, 255, 255, 0.16);
  margin-top: 20px;
}

.container-header {
  width: 100%;
}

.bg-container {
  width: 100%;
  min-height: 765px;
  background: center url(../images/bg.jpg);
}

.header-style {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
  padding-left: 120px;
  width: 100%;
  height: 5.625rem;
  background-color: rgba(242, 120, 92, 0.7);
  box-shadow: 0px 4px 4px rgba(13, 96, 111, 0.5);

}

.flex-row-wrap {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.center-position {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  background-color: white;

}

.nav-container {
  /* display: flex; */
  margin-left: 140px;
}

.navigation {
  width: 527px;
  height: 21px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding: 0px;
  margin: 0px;
  font-family: 'Red Hat Text';
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 21px;
}

.login {
  display: flex;
  justify-content: center;
  align-items: center;
  width: auto;
  height: 46%;
  /* background: #0D606F;
  box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), 0px 2px 3px rgb(13 96 111 / 16%);
  border-radius: 10px;
  border: 0px; */
  margin-left: 195px;
  margin-top: 1px;

}

/* .login>button {  
  margin: 0;
  padding: 0;
  border: 0;
  background: #0D606F;
} */

.text-link {
  width: 15%;
  height: 34.44%;
  font-family: 'Magra', sans-serif;
  font-weight: 800;
  font-size: 2rem;
  line-height: 2.4375rem;
  margin-left: 7px;
  margin-bottom: 10px;
}

.logo-link {
  padding-left: 0px;
  width: 30px;
  height: 30px;
  margin: 0;
  margin-bottom: 8px;
  background: center no-repeat url(../images/media390/travel_logo.svg);
}

.logo-img {
  margin-left: 3.25rem;
  margin-bottom: 2px;
}

.login-text:focus {
  outline: #FFFFFF 2px dotted;
}
/* ... */

